<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    android:background="#7A6E6E"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_berita"
            android:textColor="#FBF6F6"
            android:textColorHint="#FAF8F8"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/tgl_terbit"
            android:textColor="#FDFDFD"
            android:textColorHint="#FBFBFB" />

        <ImageView
            android:id="@+id/iv_berita"
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:layout_marginTop="@dimen/large_margin"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/caption"
            android:textColor="#FFFDFD"
            android:textColorHint="#FFFFFF"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_penulis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/penulis"
            android:textColor="#FDFDFD"
            android:textColorHint="#FFFFFF"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_isi_berita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/isi_berita"
            android:textColor="#FBFBFB"
            android:textColorHint="#FFFFFF"
            android:textSize="@dimen/medium_text" />

    </LinearLayout>
</ScrollView>